[gd_scene load_steps=2 format=2]

[ext_resource path="res://audio/MansionAudioPlayer.gd" type="Script" id=1]

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="DangerLevel_1_Player" type="AudioStreamPlayer" parent="."]
stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "DangerLevel_1"

[node name="DangerLevel_2_Player" type="AudioStreamPlayer" parent="."]
stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "DangerLevel_2"

[node name="DangerLevel_3_Player" type="AudioStreamPlayer" parent="."]
stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "DangerLevel_3"

